# JARVIS-1

./: .gitignore  README.md
backend/: main.py  pyproject.toml  schemas.py
backend/capture/: frame_handler.py
backend/identification/: linkedin_enricher.py  search_manager.py
backend/tests/: test_capture.py  test_face_search.py  test_linkedin_enricher.py
deploy/universal-link/: apple-app-site-association  index.html  vercel.json
docs/superpowers/plans/: 2026-07-14-meta-glasses-pimeyes-identification.md  2026-07-14-one-shot-display-identification.md
docs/superpowers/specs/: 2026-07-14-meta-glasses-pimeyes-identification-design.md  2026-07-14-one-shot-display-identification-design.md
frontend/: package-lock.json  package.json
ios/JarvisMetaBridge/: README.md
ios/JarvisMetaBridge/Config/: JarvisMetaBridge.xcconfig
ios/JarvisMetaBridge/JarvisMetaBridge/: AppConfig.swift  ContentView.swift  DeviceStreamSessionManager.swift  GlassesDisplayPresenter.swift  IdentificationAPIClient.swift  IdentifyPersonDisplayCard.swift  IdentifyPersonWidgetView.swift  Info.plist  JarvisFrameUploader.swift  JarvisMetaBridge.entitlements  JarvisMetaBridgeApp.swift  NoteBuddyWidgetView.swift  NoteStore.swift  NoteSummaryService.swift  OneShotCaptureCoordinator.swift  OneShotIdentificationViewModel.swift  ReadItWidgetView.swift  SceneDescribeService.swift  SceneDescribeWidgetView.swift  SettingsView.swift  SpeechService.swift  StreamSessionViewModel.swift  VisionAskService.swift  VoiceGuideWidgetView.swift  VoiceInputService.swift  WearablesViewModel.swift
ios/JarvisMetaBridge/JarvisMetaBridge.xcodeproj/: project.pbxproj
ios/JarvisMetaBridge/JarvisMetaBridgeTests/: DeviceStreamSessionManagerTests.swift  GlassesDisplayPresenterTests.swift  IdentificationAPIClientTests.swift  IdentifyPersonFlowTests.swift  OneShotCaptureCoordinatorTests.swift  OneShotIdentificationViewModelTests.swift  SmokeTests.swift
