[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-backend"
version = "0.1.0"
description = "FastAPI control plane for the JARVIS YC hackathon project"
requires-python = ">=3.11, <3.14"
dependencies = [
  "agentmail>=0.2.22",
  "anthropic>=0.52.0",
  "browser-use>=0.12.0",
  "browser-use-sdk>=2.0.15",
  "exa-py>=2.6.1",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "google-genai>=1.60.0",
  "langchain-openai>=0.3.0",
  "lmnr>=0.7.40",
  "loguru>=0.7.3",
  "mediapipe>=0.10.32",
  "numpy>=2.4.2",
  "opencv-python-headless>=4.10.0",
  "PicImageSearch>=3.12.11",
  "pillow>=12.1.0",
  "pyasn1>=0.6.3",
  "PyJWT>=2.12.0",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.27",
  "twscrape>=0.17.0",
  "sse-starlette>=1.8.0",
  "ultralytics>=8.3.0",
  "uvicorn>=0.35.0",
  "python-telegram-bot>=22.6",
  # "hud-python>=0.5.29",  # Disabled: mcp version conflict with browser-use
  "lap>=0.5.12",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-cov>=6.0",
  "ruff>=0.12.11",
]

[tool.setuptools]
py-modules = ["config", "env_check", "main", "pipeline", "schemas", "tasks"]
packages = ["agents", "capture", "db", "enrichment", "eval", "identification", "memory", "observability", "synthesis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-config=pyproject.toml"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
  "tests/*",
  ".venv/*",
  "__pycache__/*",
]

[tool.coverage.report]
fail_under = 46
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.uv]
# browser-use 0.12.x pins several transitive packages below CI audit floors.
override-dependencies = [
    "aiohttp>=3.13.4",
    "langchain-openai>=1.1.14",
    "lxml>=6.1.0",
    "openai>=2.26.0",
    "pillow>=12.2.0",
    "pygments>=2.20.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
